--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Wicked Sales</title>
+  <title>Neighbor Market</title>
   <script src="https://kit.fontawesome.com/e18b21b29f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles.css" />
   <link rel="shortcut icon" type="image/png" href="/images/market-icon.jpg">
